package Interface;

import Entity.Kid;
import Entity.Person;
import Enums.Prepositions;

public interface IAfraid {
    String afraid(Kid kid);
}
