package Interface;

public interface IDeclenable { //склонения слов
    String declensions();
}
