package Interface;

import Entity.Kid;

public interface IDelighted {
    String delighted(Kid him);
}
