package Interface;

public interface IItems {
    String named();
}
