package Interface;

public interface IJamming {
    String eat(IItems coffee, IItems buns);
}
