package Interface;

public interface IUnderstood {
    String understood();
}
